feat(processor): add the service scheme processor